[workspace]
members = [
    "wreq-proto",
    "wreq-rt",
]
resolver = "3"

[workspace.package]
version = "0.2.3"
homepage = "https://github.com/0x676e67/wreq"
repository = "https://github.com/0x676e67/wreq-proto"
readme = "README.md"
license = "Apache-2.0"
rust-version = "1.85"

[workspace.dependencies]
wreq-proto = { path = "./wreq-proto", version = "0.2.3" }

[profile.release]
codegen-units = 1
incremental = false

[profile.bench]
codegen-units = 1
incremental = false
