[package]
name = "wreq-rt"
version = "0.2.2-rc.2"
description = "Runtime utilities for wreq"
keywords = ["http", "client"]
categories = ["web-programming::http-client"]
repository = { workspace = true }
documentation = "https://docs.rs/wreq-rt"
authors = ["0x676e67 <gngppz@gmail.com>"]
readme = "README.md"
license = { workspace = true }
edition = "2024"
rust-version = { workspace = true }
include = ["README.md", "LICENSE", "src/**/*.rs"]

[features]
default = ["tokio-rt"]

# Enable tokio as the async runtime (default).
tokio-rt = ["dep:tokio", "tokio/net", "tokio/rt", "tokio/time", "dep:wreq-proto", "dep:pin-project-lite"]

# Enable compio as the async runtime (completion-based, io_uring/IOCP).
compio-rt = ["dep:compio", "dep:tokio", "dep:send_wrapper", "dep:wreq-proto", "dep:futures-util"]

[dependencies]
wreq-proto = { workspace = true, optional = true }
pin-project-lite = { version = "0.2.17", optional = true }
futures-util = { version = "0.3.32", default-features = false, optional = true }
tokio = { version = "1.52.3", default-features = false, optional = true }
compio = { version = "0.19.0-rc.1", features = [
    "net",
    "runtime",
    "time",
    "io",
    "io-compat",
], optional = true }
send_wrapper = { version = "0.6.0", optional = true }
